# marketmind-ai

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.streamlit  PROGRESS.md  docker-compose.yml  fly.toml  pyproject.toml
.github/workflows/: deploy.yml
data/: prepare_data.py
src/marketmind/: __init__.py  config.py  mcp_server.py
src/marketmind/agents/: analyst.py  content_writer.py  graph.py  state.py  strategist.py  tools.py
src/marketmind/api/: main.py
src/marketmind/memory/: long_term.py  short_term.py
src/marketmind/rag/: chain.py  chunker.py  compression.py  embedder.py  ingestion.py  loaders.py  pipeline.py  prompt.py  retriever.py
ui/: app.py
